Add oauth controller
