# controllers/oauth.go
@@ -32,6 +32,7 @@ func RegisterOauth2Routes(
 	publicRoutes := router.Group("/oauth")
 	{
 		publicRoutes.POST("/login", controller.Oauth2Login)
+		publicRoutes.POST("/token", controller.Oauth2Token)
 	}
 
 	authorizeRoutes := router.Group("/oauth")
@@ -51,6 +52,17 @@ type Oauth2Controller struct {
 	authMiddleware middlewares.IAuthBearerMiddleware
 }
 
+// @Summary Login an user and retrieve auth token
+// @Description logs an user
+// @ID oauth-login
+// @Tags Oauth
+// @Accept json
+// @Produce json
+// @Param user body validators.Credentials true "Logs an user"
+// @Success 201 {object} serializers.TokensSerializer
+// @Failure 400 {object} helpers.HTTPError
+// @Failure 403 {object} helpers.HTTPError
+// @Router /oauth/login [post]
 func (controller Oauth2Controller) Oauth2Login(c *gin.Context) {
 	var input validators.Credentials
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -67,6 +79,15 @@ func (controller Oauth2Controller) Oauth2Login(c *gin.Context) {
 	c.JSON(http.StatusOK, serializers.NewTokensSerializer(tokens))
 }
 
+// @Summary Authorize an app to get the user data
+// @Description authorize app
+// @ID oauth-authorize
+// @Tags Oauth
+// @Accept json
+// @Produce json
+// @Param user body validators.OauthAuthorizeData true "Authorize app to get user's data"
+// @Success 302
+// @Router /oauth/authorize [post]
 func (controller Oauth2Controller) Oauth2Authorize(c *gin.Context) {
 	user := controller.authMiddleware.GetAuthorizedUser(c)
 	var input validators.OauthAuthorizeData
@@ -86,4 +107,35 @@ func (controller Oauth2Controller) Oauth2Authorize(c *gin.Context) {
 
 	redirectUrl := fmt.Sprintf("%s?code=%s&state=%s", input.RedirectURI, "", input.State)
 	c.Redirect(http.StatusFound, redirectUrl)
+}
+
+// @Summary Retrieves access token form the authorization one
+// @Description Retrieves access token form the authorization one
+// @ID oauth-token
+// @Tags Oauth
+// @Accept application/x-www-form-urlencoded
+// @Accept json
+// @Produce json
+// @Param user body validators.OauthExchangeToken true "Token exchange data"
+// @Success 201 {object} serializers.TokensSerializer
+// @Failure 400 {object} helpers.HTTPError
+// @Failure 403 {object} helpers.HTTPError
+// @Router /oauth/token [post]
+func (controller Oauth2Controller) Oauth2Token(c *gin.Context) {
+	var input validators.OauthExchangeToken
+	if err := c.ShouldBindJSON(&input); err != nil {
+		helpers.AbortWithStatus(c, http.StatusBadRequest, err)
+		return
+	}
+
+	app, err := controller.appService.ReadByClientID(uuid.FromStringOrNil(input.ClientID))
+	if err != nil {
+		helpers.AbortWithStatus(c, http.StatusBadRequest, err)
+	}
+
+	tokens, err := controller.authService.ExchangeOauthToken(*app, input)
+	if err != nil {
+		helpers.AbortWithStatus(c, http.StatusUnauthorized, err)
+	}
+	c.JSON(http.StatusOK, serializers.NewTokensSerializer(*tokens))
 }
