# serializers/auth.go
@@ -2,14 +2,13 @@ package serializers
 
 import (
 	"gandalf/services"
-	"time"
 )
 
 type TokensSerializer struct {
-	AcessToken   string        `json:"access_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"`
-	RefreshToken string        `json:"refresh_token" example:"kpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyf"`
-	TokenType    string        `json:"token_type" example:"Bearer"`
-	ExpiresIn    time.Duration `json:"expires_in" example:"3600"`
+	AcessToken   string `json:"access_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"`
+	RefreshToken string `json:"refresh_token" example:"kpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyf"`
+	TokenType    string `json:"token_type" example:"Bearer"`
+	ExpiresIn    int64  `json:"expires_in" example:"3600"`
 }
 
 // Creates a new user serializer
@@ -18,6 +17,6 @@ func NewTokensSerializer(tokens services.AuthTokens) TokensSerializer {
 		AcessToken:   tokens.AccessToken,
 		RefreshToken: tokens.RefreshToken,
 		TokenType:    "Bearer",
-		ExpiresIn:    tokens.ExpiresIn,
+		ExpiresIn:    int64(tokens.ExpiresIn),
 	}
 }
